Add chatbot SVG and integrate into docker-compose and index.html

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,7 @@ services:
       - PASSWORD=${PASSWORD:-Password}
       - PYTHONUNBUFFERED=1
     volumes:
+      - ./index.htm:/usr/share/novnc/index.htm
+      - ./chatbot.svg:/usr/share/novnc/app/images/chatbot.svg
       - ./startup.sh:/startup.sh
     entrypoint: ["/bin/bash", "/startup.sh"]
